Fix x-overflow from side container in non-mobile resolutions

--- a/app/gelato/styles/application.scss
+++ b/app/gelato/styles/application.scss
@@ -46,9 +46,7 @@ gelato-application {
   position: absolute;
   width: 100%;
 
-  &.mobile {
-    overflow-x: hidden;
-  }
+  overflow-x: hidden;
 
   #page-container {
 
